objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>legacy_key1__c</fullName>
        <label>legacy key1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legacy_key2__c</fullName>
        <label>legacy key2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Staff</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name_Staff__c</columns>
        <columns>Staff_Last_Name__c</columns>
        <columns>Organization__c</columns>
        <columns>Active__c</columns>
        <columns>Role__c</columns>
        <columns>User_ID__c</columns>
        <columns>Site__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>First_Name_Staff__c</columns>
        <columns>Staff_Last_Name__c</columns>
        <columns>Organization__c</columns>
        <columns>Active__c</columns>
        <columns>Role__c</columns>
        <columns>User_ID__c</columns>
        <columns>Site__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <nameField>
        <label>Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>