objects/Staff__c/fields/Add_staff_to_all_intervention_sections__c.field-meta.xml
<CustomField>
    <fullName>Add_staff_to_all_intervention_sections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add staff to all intervention sections</label>
    <type>Checkbox</type>
</CustomField>