objects/Staff__c/fields/Stadd_Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Stadd_Power_of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stadd Power of One</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>