objects/Staff__c/fields/Staff_Assessment_Integrated__c.field-meta.xml
<CustomField>
    <fullName>Staff_Assessment_Integrated__c</fullName>
    <formula>Individual__r.Staff_Assessment_Integrated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Assessment Integrated</label>
    <type>Checkbox</type>
</CustomField>