objects/Staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name_Staff__c</columns>
    <columns>Staff_Last_Name__c</columns>
    <columns>Organization__c</columns>
    <columns>Active__c</columns>
    <columns>Role__c</columns>
    <columns>User_ID__c</columns>
    <columns>Site__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>