objects/Staff__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>First_Name_Staff__c</columns>
    <columns>Staff_Last_Name__c</columns>
    <columns>Organization__c</columns>
    <columns>Active__c</columns>
    <columns>Role__c</columns>
    <columns>User_ID__c</columns>
    <columns>Site__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
</ListView>